# twitter-platform

./: README.md
task_generator/: .env  Cargo.toml
task_generator/src/: main.rs
task_generator/src/database/: DB.rs  KafkaConfig.rs  MQConfig.rs  mod.rs
user_post/: .env  Cargo.toml
user_post/src/: docker-compose.yaml  kafka_script.sh  main.rs  table_schemas.sql
user_post/src/database/: DB.rs  KafkaConfig.rs  mod.rs
user_post/src/handlers/: UserHandler.rs  mod.rs
user_post/src/models/: Auth.rs  User.rs  mod.rs
user_post/src/security/: JWtExtractor.rs  mod.rs
user_post/src/utils/: SecurityUtil.rs  mod.rs
